# shadow

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
scripts/: build-release.sh
src/: main.rs  osquery.rs
testing/: Containerfile.builder  Containerfile.debian  Containerfile.fedora  Containerfile.rocky  Containerfile.ubuntu  README.md  docker-compose.yml
