[package]
name = "shadow"
version = "0.1.0"
edition = "2021"
description = "Hyprwatch shadow agent - runs osquery and reports to Hyprwatch server"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "5.0"
flate2 = "1.0"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "stream",
  "native-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
tokio = { version = "1", features = ["full"] }
zip = "2.2"
